# AG-Agent-Hack

./: .env.template  .gitignore  README.md  mcp_servers.json  project_status.md  pyproject.toml  requirements.txt
data/: golden_dataset.json  history.json
plan/: 00_overview.md  01_setup.md  02_target_app.md  03_phoenix_introspection.md  04_optimization.md  05_gitlab_integration.md  06_dashboard.md  07_polish.md
scripts/: diagnose_phoenix.py  generate_sample_queries.py  query_graphql.py  simulate_traffic.py  verify_analysis.py  verify_dashboard.py  verify_deployment.py  verify_gemini.py  verify_optimization.py  verify_phoenix.py
src/: prompts.json  target_app.py
src/agent/: __init__.py  analyzer.py  evaluator.py  gitlab_deployer.py  monitor.py  optimizer.py  orchestrator.py
src/dashboard/: app.py
src/dashboard/static/css/: styles.css
src/dashboard/static/js/: main.js
src/dashboard/templates/: index.html
tests/: test_agent.py
