[project]
name = "ag-agent-hack"
version = "0.1.0"
description = "Autonomous LLM Eval-to-Improvement Loop Agent using Arize Phoenix and GitLab MCP"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Saksham" }
]
dependencies = [
    "google-adk>=2.1.0",
    "google-genai>=1.75.0",
    "arize-phoenix>=16.3.0",
    "arize-phoenix-otel>=0.16.1",
    "openinference-instrumentation-google-adk>=0.1.15",
    "openinference-instrumentation-google-genai>=1.0.2",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = []

[tool.vercel]
entrypoint = "src.dashboard.app:app"

